# iec104_server_simulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
config/: config.csv
example/: config-1.csv  config.csv
include/: globals.h
include/flags/: flags.h
include/helpers/: SharedMap.h  SharedQueue.h  filesystem.h  logger.h  qds.h  strings.h  time.h
src/: callbacks.cpp  callbacks.h  config.cpp  config.h  dummy_readings.cpp  dummy_readings.h  simulator_iec104_server.h  timestamps.cpp  timestamps.h  utils.cpp  utils.h
